# quantum-audio

./: .gitignore  .readthedocs.yaml  .ruff.toml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO.ipynb  Demo-Long.ipynb  Demo-Short.ipynb  Demo-short.ipynb  Demo.ipynb  ENVIRONMENT.md  MIGRATION.md  NOTICE  Presentation-Copy1.ipynb  Presentation.ipynb  QuantumAudio.ipynb  README.md  install.sh  main.ipynb  miniconda.sh  pyproject.toml  pyproject_dist.toml  readme.rst  reference_test.ipynb  requirements-notebook.txt  requirements.txt  requirements_all.txt  schemes.ipynb  test.ipynb  utils.py
demo/: demo.ipynb
demo-tools/: audio_io.py  interactive.py
demo/tools/: audio.py
demos/: 1_Basics_Walkthrough.ipynb  2_Multi-Channel_Processing_Example.ipynb  demo.ipynb  requirements-demos.txt
demos/media/: Ignacio.m4a  Left_and_right-Charlie_Puth.m4a
demos/requirements/: requirements-audio.txt  requirements-notebook.txt
demos/scripts/: export.py  params.py
demos/tools/: audio.py  audio_io.py  interactive.py
docs/: conf.py  docs.html  index.rst  intro.rst  modules.rst  quantumaudio.rst  quantumaudio.schemes.rst  quantumaudio.schemes_modules.rst  quantumaudio.tools.rst  quantumaudio.utils.rst  readme.rst  requirements.txt
docs/_build/doctrees/: README.doctree
docs/_build/html/: README.html  merged.html  output.html
docs/_build/html/_sources/: README.rst.txt
docs/_build/singlehtml/: .buildinfo  index.html
docs/contents/: front_page.rst  quantumaudio.rst  quantumaudio.schemes.rst  quantumaudio.tools_modules.rst  quantumaudio.utils.rst  quantumaudio.utils_modules.rst
docs/guides/: CONTRIBUTING.md  MIGRATION.md
docs_/guides/: CONTRIBUTING.md  MIGRATION.md
docs_v0.1.0/_build/doctrees/: environment.pickle  index.doctree
docs_v0.1.0/_build/doctrees/contents/: front_page.doctree  quantumaudio.doctree  quantumaudio.schemes.doctree  quantumaudio.schemes_modules.doctree  quantumaudio.tools.doctree  quantumaudio.tools_modules.doctree  quantumaudio.utils.doctree  quantumaudio.utils_modules.doctree
docs_v0.1.0/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs_v0.1.0/_build/html/_modules/: index.html  quantumaudio.html
docs_v0.1.0/_build/html/_modules/quantumaudio/: tools.html
docs_v0.1.0/_build/html/_modules/quantumaudio/interfaces/: api.html
docs_v0.1.0/_build/html/_modules/quantumaudio/schemes/: base_scheme.html  mqsm.html  msqpam.html  qpam.html  qsm.html  sqpam.html
docs_v0.1.0/_build/html/_modules/quantumaudio/tools/: plot.html  stream.html
docs_v0.1.0/_build/html/_modules/quantumaudio/utils/: circuit.html  convert.html  data.html  execute.html  preview.html  results.html
docs_v0.1.0/_build/html/_sources/: index.rst.txt
docs_v0.1.0/_build/html/contents/: front_page.html  quantumaudio.html  quantumaudio.schemes.html  quantumaudio.schemes_modules.html  quantumaudio.tools.html  quantumaudio.tools_modules.html  quantumaudio.utils.html  quantumaudio.utils_modules.html
docs_v0.2.0/: conf.py
notebooks/: Quantum Representations Test.ipynb  demo.ipynb  multi-channel-test.ipynb  reference_test.ipynb  schemes.ipynb  schemes_test.ipynb
notebooks/.ipynb_checkpoints/: reference_test-checkpoint.ipynb  schemes-checkpoint.ipynb
quantumaudio/: __init__.py  __init__2.py  __init__3.py  main.py  requirements.txt  utils.py
quantumaudio/interfaces/: api.py
quantumaudio/schemes/: __init__.py  base_scheme.py  mqsm.py  msqpam.py  notes.py  qpam.py  qsm.py  sqpam.py
quantumaudio/tests/: test_msqpam.py  test_qpam.py  test_qsm.py  test_sqpam.py
quantumaudio/tools/: __init__.py  plot.py  stream.py
quantumaudio/utils/: __init__.py  circuit.py  convert.py  data.py  execute.py  plot.py  preview.py  qiskit_helpers.py  quantum.py  results.py  stream.py
scripts/: export.py  params.py
src/: main.py  utils.py
src/schemes/: mqsm.py  msqpam.py  qpam.py  qsm.py  qsm_concept.py  qsm_stereo.py  sqpam.py  sqpam_addition.py  sqpam_ckp.py  sqpam_concept.py  sqpam_mono.py  sqpam_multi_test.py
tests/: README.md  test_mqsm.py  test_msqpam.py  test_qpam.py  test_qsm.py  test_sqpam.py
tools/: __init__.py  audio.py  interactive.py  plot.py  stream.py
