[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "quantumaudio"
dynamic = ["version", "dependencies", "optional-dependencies", "readme"]
authors = [
    {name = "Moth Quantum", email = "hari@mothquantum.com"},
]
description = """A Python package for building Quantum Representations of Digital Audio. Developed by Moth Quantum.
"""
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
keywords = ["audio","quantum computing","signal processing"]
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Science/Research",
 	"Intended Audience :: Developers",
	"License :: OSI Approved :: Apache Software License",
 	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
 	"Programming Language :: Python :: 3.11"
]
dependencies = [
	"qiskit==0.46.0",
	"qiskit_aer==0.13.3",
	"numpy",
	"bitstring",
	"matplotlib",
	"pylatexenc",
	"tqdm"
]

[project.urls]
Homepage = "www.mothquantum.com"
Repository = "https://github.com/moth-quantum/quantum-audio"
Documentation = "https://quantumaudio.readthedocs.io/en/latest/"

[project.optional-dependencies]
audio_io = ["soundfile","librosa"]
notebook_examples = ["ipython","ipykernel","ipywidgets"]

[tool.setuptools]
packages = ["quantumaudio"] 
